tests/call_caching2/call_caching2.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:3

Cannot call `Iterable` because: [incompatible-call]
 - Either `Iterable` [1] is incompatible with `Array` [2].
 - Or empty array literal [3] is incompatible with `Iterable` [4].

   test.js:2:3
   2|   Iterable(items || []).size;
        ^^^^^^^^

References:
   test.js:1:22
   1| function Foo(items: ?Iterable<number>) {
                           ^^^^^^^^^^^^^^^^ [1]
   lib/immutable.js:5:20
   5|   static <T>(iter: Array<T>): Iterable<T>;
                         ^^^^^^^^ [2]
   test.js:2:21
   2|   Iterable(items || []).size;
                          ^^ [3]
   lib/immutable.js:4:18
   4|   static <V,Iter:Iterable<V>>(iter: Iter): Iter;
                       ^^^^^^^^^^^ [4]



Found 1 error

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
